--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "gulp": "^3.9.1",
         "gulp-watch": "^4.3.0",
+        "gulp-postcss": "^6.0.0",
         "browser-sync": "^2.13.0"
     },
     "devDependencies": {},
